fix(AToast, APageOverlay): add data attribute to ignore outside clicks and decrease z-index value (#331)
* Resolves #297

--- a/framework/components/APageOverlay/APageOverlay.scss
+++ b/framework/components/APageOverlay/APageOverlay.scss
@@ -7,5 +7,5 @@
   bottom: 0;
   left: 0;
   background: rgb(0 0 0 / 40%);
-  z-index: 9999;
+  z-index: 3;
 }
